change height buttons

--- a/index.html
+++ b/index.html
@@ -3,17 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/svg" href="img/weather_icons/sun.png">
   <title>Weather</title>
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+  <meta name="theme-color" content="#258e9e">
+  <link rel="apple-touch-icon" type="image/svg" href="img/weather_icons/sun.png">
+
   <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-  
-  <!-- <div class="weather__icon"> </div> -->
 
   <div class="container">
     
